--- a/non-veg-staters.html
+++ b/non-veg-staters.html
@@ -17,5 +17,5 @@
 <li>Fish Fry</li>
   </pre>
  </ul>
- <a href="./P_Srikanth--day5.html">GO BACK TO FOOD MENU</a>
+ <a href="./index.html">GO BACK TO FOOD MENU</a>
 </body></html>
