--- a/non-veg.html
+++ b/non-veg.html
@@ -13,5 +13,5 @@
 </pre>
 <pre>
 </pre>
-<a href="./P_Srikanth--day5.html">GO BACK TO FOOD MENU</a>
+<a href="./index.html">GO BACK TO FOOD MENU</a>
 </body></html>
