--- a/north.html
+++ b/north.html
@@ -13,5 +13,5 @@
 <li>Rumali Roti with Paneer Butter Chicken</li>
 </pre>
 </ul>
-<a href="./P_Srikanth--day5.html">GO BACK TO FOOD MENU</a>
+<a href="./index.html">GO BACK TO FOOD MENU</a>
 </body></html>
