--- a/southindian.html
+++ b/southindian.html
@@ -18,5 +18,5 @@
 <li>Muddapappu Avakai Annam</li>
     </pre>
 </ul>
-<a href="./P_Srikanth--day5.html">GO BACK TO FOOD MENU</a>
+<a href="./index.html">GO BACK TO FOOD MENU</a>
 </body></html>
