--- a/veg.html
+++ b/veg.html
@@ -11,5 +11,5 @@
 <li>Schezwan Veg Fried Rice</li>
 </pre>
 </ul>
-<a href="./P_Srikanth--day5.html">GO BACK TO FOOD MENU</a>
+<a href="./index.html">GO BACK TO FOOD MENU</a>
 </body></html>
