--- a/veg_starters.html
+++ b/veg_starters.html
@@ -22,6 +22,6 @@
 
 </marquee>
   
-  <a href="./P_Srikanth--day5.html">GO BACK TO FOOD MENU</a>
+  <a href="./index.html">GO BACK TO FOOD MENU</a>
 </body>
 </html>
